src/objects/Integration_Framework_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting is used by One CRM integration framework</description>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoB__c</fullName>
        <label>LoB</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Event__c</fullName>
        <label>Sub-Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_1__c</fullName>
        <label>System 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_2__c</fullName>
        <label>System 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Framework Configuration</label>
</CustomObject>